--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,17 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'junit:junit:4.13.2'
-}
-
 group = 'com.pb.validation'
 version = '0.0.1-SNAPSHOT'
 description = 'simple-validation-framework'
 
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.sourceCompatibility = JavaVersion.VERSION_17
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+}
 
 publishing {
     publications {
@@ -31,4 +33,8 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+test {
+    useJUnitPlatform()
 }
